--- a/css/style.css
+++ b/css/style.css
@@ -249,3 +249,130 @@ select {
     font-weight: 700;
     color: hsl(var(--clr-white) / .25);
 }
+
+/** Components */
+
+.large-button {
+    position: relative;
+    display: grid;
+    z-index: 1;
+    padding: 0 2em;
+    place-items: center;
+    aspect-ratio: 1;
+    text-decoration: none;
+    border-radius: 50%;   
+}
+
+.large-button::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    background: hsl(var(--clr-white) / .15);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    opacity: 0;
+    transition: opacity 500ms linear, transform 750ms ease-in-out;
+}
+
+.large-button:hover::after, 
+.large-button:focus::after {
+    opacity: 1;
+    transform: scale(1.5);
+
+}
+
+.primary-navigation {
+    --gap: 8rem;
+    --underline-gap: 2rem;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.primary-navigation a {
+    text-decoration: none;
+}
+
+.primary-navigation a > span {
+    font-weight: 700;
+    margin-right: .5em;
+}
+
+.underline-indicators > * {
+    padding: var(--underline-gap, 1rem) 0;
+    border: 0;
+    cursor: pointer;
+    border-bottom: .2rem solid hsl(var(--clr-white) / 0);
+
+}
+
+.underline-indicators > *:hover,
+.underline-indicators > *:focus {
+    border-color: hsl(var(--clr-white) / .5);
+}
+
+.underline-indicators > .active,
+.underline-indicators > [aria-selected="true"] {
+    color: hsl(var(--clr-white) / 1);
+    border-color: hsl(var(--clr-white) / 1);
+}
+
+.tab-list {
+    --gap: 3rem;
+
+}
+
+.dot-indicators > * {
+    cursor: pointer;
+    border: 0;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    padding: .5em;
+    background-color: hsl(var(--clr-white) / .25);
+}
+
+.dot-indicators > *:hover,
+.dot-indicators > *:focus {
+    background-color: hsl(var(--clr-white) / .5);
+}
+
+.dot-indicators > [aria-selected="true"] {
+    background-color: hsl(var(--clr-white) / 1);
+}
+
+.number-indicators > * {
+    cursor: pointer;
+    border: 1;
+    /* border-color: hsl(var(--clr-light)); */
+    border-color: hsl(var(--clr-white) / .5);
+    display: grid;
+    border-radius: 50%;
+    place-items: center;
+    /* aspect-ratio: 1; */
+    /* padding: .5em; */
+    height: 4rem;
+    width: 4rem;
+    background-color: hsl(var(--clr-dark));
+}
+
+/* .number-indicators:hover::after,
+.number-indicatorsbutton:focus::after {
+    opacity: 1;
+    transform: scale(1.5); 
+
+} */
+
+.number-indicators > *:hover,
+.number-indicators > *:focus {
+    border-color: hsl(var(--clr-white));
+}
+
+.number-indicators>[aria-selected="true"] {
+    color: hsl(var(--clr-dark));
+    background-color: hsl(var(--clr-white));
+}
+
+
+
+
