--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,8 @@ body {
     background-color: hsl(var(--clr-dark));
     line-height: 1.5;
     min-height: 100vh;
+    display: grid;
+    grid-template-rows: min-content 1fr;
 }
 
 /** Make images easier to work with */
@@ -118,6 +120,26 @@ select {
     margin-inline: auto; /** sets margin on left and right */
     max-width: 80rem;
 }
+
+.grid-container {
+    display: grid;
+}
+
+@media (min-width: 45rem ){
+    .grid-container{
+        column-gap: var(--container-gap, 2rem);
+        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(2rem, 1fr);
+    }
+    .grid-container>*:first-child {
+        grid-column: 2;
+    }
+
+    .grid-container>*:last-child {
+        grid-column: 3;
+    }
+}
+
+
 
 /** Screen reader only */
 .sr-only {
@@ -254,7 +276,7 @@ select {
 
 .large-button {
     position: relative;
-    display: grid;
+    display: inline-grid;
     z-index: 1;
     padding: 0 2em;
     place-items: center;
