--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     --clr-white: 0 0% 100%;
 
     /* font size */
-    --fs-900: 9.375rem;
+    --fs-900: clamp(5rem, 10vw + 1rem, 9.375rem);
     --fs-800: 6.25rem;
     --fs-700: 3.5rem;
     --fs-600: 2rem;
@@ -21,8 +21,26 @@
     --ff-serif: "Bellefair", serif;
     --ff-sans-cond: "Barlow Condensed", sans-serif;
     --ff-sans-normal: "Barlow", sans-serif;
-        
+    
+}
 
+@media (min-width: 35em) {
+    :root {
+        --fs-800: 5rem;
+        --fs-700: 2.5rem;
+        --fs-600: 1.5rem;
+        --fs-400: 1rem;
+    }
+}
+
+@media (min-width: 45em) {
+    :root {
+        --fs-800: 6.25rem;
+        --fs-700: 3.5rem;
+        --fs-600: 2rem;    
+        --fs-400: 1.125rem;
+    
+    }
 }
 
 /** CSS Reset */
@@ -110,6 +128,10 @@ select {
     gap: var(--gap, 1rem);
 }
 
+.d-block {
+    display: block;
+}
+
 .flow > *:where(:not(:first-child)) {
     margin-top: var(--flow-space, 1rem);
     /* outline: 1px solid red; */
@@ -122,11 +144,19 @@ select {
 }
 
 .grid-container {
+    text-align: center;
     display: grid;
+    place-items: center;
+    padding: 1rem;
+}
+
+.grid-container * {
+    max-width: 50ch;
 }
 
 @media (min-width: 45rem ){
     .grid-container{
+        text-align: left;
         column-gap: var(--container-gap, 2rem);
         grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(2rem, 1fr);
     }
@@ -136,6 +166,12 @@ select {
 
     .grid-container>*:last-child {
         grid-column: 3;
+    }
+
+    .grid-container--home {
+        padding-bottom: max(6rem, 20vh);
+        align-items: end;
+
     }
 }
 
@@ -275,6 +311,7 @@ select {
 /** Components */
 
 .large-button {
+    font-size: 2rem;
     position: relative;
     display: inline-grid;
     z-index: 1;
@@ -395,6 +432,28 @@ select {
     background-color: hsl(var(--clr-white));
 }
 
+/* Page speific backgrounds */
 
+.body {
+    background-size: cover;
+    background-position: bottom center;
+}
 
+.home {
+    background-image: url(../assets/home/background-home-mobile.jpg);
+}
 
+@media (min-width: 35rem) {
+    .home {
+        /* background-position: bottom center; */
+        /* background-size: cover; */
+        background-position: center center;
+        background-image: url(../assets/home/background-home-tablet.jpg);
+    }
+}
+
+@media (min-width: 45rem) {
+    .home {
+        background-image: url(../assets/home/background-home-desktop.jpg);
+    }
+}
