completed mobile nav and added functionality to toggle hamburger menu

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ body {
     min-height: 100vh;
     display: grid;
     grid-template-rows: min-content 1fr;
+    overflow-x: hidden;
 }
 
 /** Make images easier to work with */
@@ -120,7 +121,7 @@ select {
 
 .flex {
     display: flex;
-    gap: var(--gap, 2rem);    
+    gap: var(--gap, 1rem);    
 }
 
 .grid {
@@ -154,11 +155,11 @@ select {
     max-width: 50ch;
 }
 
-@media (min-width: 45rem ){
+@media (min-width: 45em ){
     .grid-container{
         text-align: left;
         column-gap: var(--container-gap, 2rem);
-        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(2rem, 1fr);
+        grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(1rem, 1fr);
     }
     .grid-container>*:first-child {
         grid-column: 2;
@@ -326,7 +327,7 @@ select {
     content: '';
     position: absolute;
     z-index: -1;
-    background: hsl(var(--clr-white) / .15);
+    background: hsl(var(--clr-white) / .1);
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -342,11 +343,65 @@ select {
 }
 
 .primary-navigation {
-    --gap: 8rem;
+    /* --gap: 8rem; */
     --underline-gap: 2rem;
     list-style: none;
     padding: 0;
     margin: 0;
+    background: hsl(var(--clr-white) / 0.05);
+    backdrop-filter: blur(1.5rem);
+}
+
+.mobile-nav-toggle {
+    display: none;
+
+}
+
+@media (max-width: 35rem) {
+    .primary-navigation {
+        --underline-gap: .5rem;
+        position: fixed;
+        z-index: 1000;
+        inset: 0 0 0 30%;
+        list-style: none;
+        padding: min(20rem, 15vh) 2rem;
+        margin: 0;
+        flex-direction: column;
+        transform: translateX(100%);
+        transition: transform 500ms ease-in-out;
+    }
+
+    .primary-navigation[data-visible="true"] {
+        transform: translateX(0);
+    }
+    
+    .mobile-nav-toggle {
+        display: block;
+        position: absolute;
+        z-index: 2000;
+        right: 1rem;
+        top: 2rem;
+        background: transparent;
+        background-image: url(../assets/shared/icon-hamburger.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        width: 1.5rem;
+        aspect-ratio: 1;
+        border: 0;
+    }
+
+    .mobile-nav-toggle[aria-expanded="true"] {
+        background-image: url(../assets/shared/icon-close.svg);
+    }
+
+    .mobile-nav-toggle:focus-visible {
+        outline: 5px solid red;
+        outline-offset: 5px;
+    }
+
+    .primary-navigation.underline-indicators > .active {
+        border: 0;
+    }
 }
 
 .primary-navigation a {
@@ -386,7 +441,7 @@ select {
     cursor: pointer;
     border: 0;
     border-radius: 50%;
-    aspect-ratio: 1;
+    /* aspect-ratio: 1; */
     padding: .5em;
     background-color: hsl(var(--clr-white) / .25);
 }
@@ -447,7 +502,7 @@ select {
     .home {
         /* background-position: bottom center; */
         /* background-size: cover; */
-        background-position: center center;
+        /* background-position: center center; */
         background-image: url(../assets/home/background-home-tablet.jpg);
     }
 }
