--- a/css/style.css
+++ b/css/style.css
@@ -552,7 +552,7 @@ select {
     padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
     max-width: 50ch;
 }
 
@@ -595,6 +595,30 @@ select {
     font-size: 1.75rem;
 }
 
+/* Crew layout */
+.grid-container--crew {
+    --flow-space: 2rem;
+    grid-template-areas:
+        'title'
+        'image'
+        'tabs'
+        'content';
+}
+
+.grid-container--crew > img {
+    grid-area: image;
+    max-width: 60%;
+    border-bottom: 1px solid hsl(var(--clr-white) / .1);
+}
+
+.grid-container--crew > .dot-indicators {
+    grid-area: tabs;
+}
+
+.grid-container--crew > .crew-details {
+    grid-area: content;
+}
+
 @media (min-width: 35em ){
     .numbered-title {
         justify-self: start;
@@ -605,6 +629,17 @@ select {
         flex-direction: row;
         justify-content: space-evenly;
     }
+
+    .grid-container--crew {
+        --flow-space: 2rem;
+        padding-bottom: 0;
+        grid-template-areas:
+            'title'
+            'content'
+            'tabs'
+            'image';
+    }
+
 }
 
 @media (min-width: 45em) {
@@ -637,12 +672,29 @@ select {
         
     }
     
-    .grid-container--destination > img {
+    .grid-container--destination > img,
+    .grid-container--crew > img {
         max-width: 90%;
     }
 
     .destination-meta {
-        --gap: 6rem;
+        --gap: min(6vw, 6rem);
         justify-content: start;
+    }
+
+    .grid-container--crew {
+        --flow-space: 2rem;
+        grid-template-areas:
+            '. title title .'
+            '. content image .'
+            '. tabs image .'
+    }
+
+    .grid-container--crew > .dot-indicators {
+        justify-self: start;
+    }
+
+    .grid-container--crew > img {
+        align-self: end;
     }
 }
