completed crew page and tabs navigation

--- a/css/style.css
+++ b/css/style.css
@@ -621,6 +621,7 @@ select {
 .grid-container--destination > picture {
     grid-area: image;
     max-width: 60%;
+    align-self: start;
 }
 
 .grid-container--destination > .tab-list {
